--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My New github Repo</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <h1>I can push github</h1>
+    <p>We should work hard to reach our goal</p>
+    <h3>bangladesh politics</h3>
 </body>
 </html>
