--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 <body>
     <h1>I can push github</h1>
     <p>We should work hard to reach our goal</p>
-    <h3>bangladesh politics</h3>
-    <img src="nature.jpg" alt="">
+    <img src="nature.jpg" alt=""><br><hr>
     <img src="art.png" alt="">
 </body>
 </html>
