--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 <body>
     <h1>I can push github</h1>
     <p>We should work hard to reach our goal</p>
-    <img src="nature.jpg" alt=""><br><hr>
-    <img src="art.png" alt="">
+    <img src="nature.jpg" alt=""><hr>
 </body>
 </html>
