--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
     <h1>I can push github</h1>
     <p>We should work hard to reach our goal</p>
     <img src="nature.jpg" alt=""><hr>
+    <h1>Module 3-9</h1>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iusto, perferendis eius ratione totam omnis numquam autem possimus esse facere exercitationem quam nulla est consequatur eligendi delectus deleniti, tenetur laborum obcaecati!</p>
 </body>
 </html>
